--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint-api": "node_modules/.bin/eslint index.js --env node --env browser --rule 'quotes: [2, single], consistent-return: false'",
     "lint-test": "node_modules/.bin/eslint spec/parse-latin.spec.js --env node --env mocha --rule 'quotes: [2, single], no-loop-func: false'",
     "lint-benchmark": "node_modules/.bin/eslint benchmark/index.js --env node --global suite,set,bench --rule 'quotes: [2, single]'",
-    "lint-style": "node_modules/.bin/jscs index.js spec/parse-latin.spec.js --reporter=inline",
+    "lint-style": "node_modules/.bin/jscs benchmark/index.js index.js spec/parse-latin.spec.js --reporter=inline",
     "install-browser-test": "npm install browserify",
     "build-browser-test": "node_modules/.bin/browserify spec/parse-latin.spec.js -o spec/browser.spec.js",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- spec/parse-latin.spec.js",
