--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,34 @@
 {
-    "name": "parse-latin",
-    "description": "Latin-script (natural language) parser",
-    "authors": [
-        "Titus Wormer <tituswormer@gmail.com>"
-    ],
-    "keywords": [
-        "latin",
-        "script",
-        "natural",
-        "language",
-        "parser"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/wooorm/parse-latin.git"
-    },
-    "license": "MIT",
-    "dependencies": {},
-    "main": "index.js",
-    "ignore": [
-        ".*",
-        "*.log",
-        "*.md",
-        "component.json",
-        "package.json",
-        "coverage",
-        "node_modules",
-        "benchmark",
-        "spec"
-    ]
+  "name": "parse-latin",
+  "description": "Latin-script (natural language) parser",
+  "authors": [
+    "Titus Wormer <tituswormer@gmail.com>"
+  ],
+  "keywords": [
+    "latin",
+    "script",
+    "natural",
+    "language",
+    "parser"
+  ],
+  "dependencies": {
+    "nlcst-to-string": "~0.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wooorm/parse-latin.git"
+  },
+  "license": "MIT",
+  "main": "index.js",
+  "ignore": [
+    ".*",
+    "*.log",
+    "*.md",
+    "component.json",
+    "package.json",
+    "coverage",
+    "node_modules",
+    "benchmark",
+    "spec"
+  ]
 }
