--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "parse-latin",
   "version": "0.1.3",
   "description": "Latin-script (natural language) parser",
+  "license": "MIT",
   "keywords": [
     "latin",
     "script",
@@ -10,20 +11,19 @@
     "parser"
   ],
   "dependencies": {
-    "nlcst-to-string": "0.0.1"
+    "nlcst-to-string": "^0.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wooorm/parse-latin.git"
   },
   "author": "Titus Wormer <tituswormer@gmail.com>",
-  "license": "MIT",
   "devDependencies": {
     "eslint": "^0.8.0",
     "istanbul": "^0.3.0",
     "jscs": "^1.5.8",
     "matcha": "^0.5.0",
     "mocha": "^1.21.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wooorm/parse-latin.git"
   },
   "scripts": {
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports spec/parse-latin.spec.js",
