--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test/index.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test/index.js",
     "lint": "npm run-script lint-api && npm run-script lint-script && npm run-script lint-test && npm run-script lint-benchmark && npm run-script lint-style",
-    "lint-api": "node_modules/.bin/eslint index.js lib/parse-latin.js --env node --env browser --rule 'quotes: [2, single], consistent-return: false'",
-    "lint-test": "node_modules/.bin/eslint test/index.js --env node --env mocha --rule 'quotes: [2, single], no-loop-func: false'",
-    "lint-benchmark": "node_modules/.bin/eslint benchmark.js --env node --global suite,set,bench --rule 'quotes: [2, single]'",
-    "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js --env node --rule 'quotes: [2, single]'",
+    "lint-api": "node_modules/.bin/eslint index.js lib/parse-latin.js --rule 'consistent-return: false'",
+    "lint-test": "node_modules/.bin/eslint test/index.js --env mocha",
+    "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
+    "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js",
     "lint-style": "node_modules/.bin/jscs script/build-expressions.js script/generate-fixture.js benchmark.js index.js lib/parse-latin.js test/index.js --reporter=inline",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/index.js",
     "benchmark": "node_modules/.bin/matcha benchmark.js",
