--- a/package.json
+++ b/package.json
@@ -34,17 +34,18 @@
   "scripts": {
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test/index.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test/index.js",
+    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/index.js",
     "lint": "npm run-script lint-api && npm run-script lint-script && npm run-script lint-test && npm run-script lint-benchmark && npm run-script lint-style",
     "lint-api": "node_modules/.bin/eslint index.js lib/parse-latin.js --rule 'consistent-return: false'",
     "lint-test": "node_modules/.bin/eslint test/index.js --env mocha",
     "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
     "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js",
     "lint-style": "node_modules/.bin/jscs script/build-expressions.js script/generate-fixture.js benchmark.js index.js lib/parse-latin.js test/index.js --reporter=inline",
-    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/index.js",
+    "make": "npm run-script lint && npm run-script coverage",
     "benchmark": "node_modules/.bin/matcha benchmark.js",
     "build-expressions": "node script/build-expressions",
     "fixture": "node script/generate-fixture",
-    "prepublish": "npm run build-expressions",
-    "make": "npm run-script lint && npm run-script coverage"
+    "build": "npm run build-expressions",
+    "prepublish": "npm run build"
   }
 }
