--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test/index.js",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/index.js",
     "lint": "npm run-script lint-api && npm run-script lint-script && npm run-script lint-test && npm run-script lint-benchmark && npm run-script lint-style",
-    "lint-api": "node_modules/.bin/eslint index.js lib/parse-latin.js --rule 'consistent-return: false'",
+    "lint-api": "node_modules/.bin/eslint index.js lib/parse-latin.js lib/expressions.js --rule 'consistent-return: false'",
     "lint-test": "node_modules/.bin/eslint test/index.js --env mocha",
     "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
     "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js",
