--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lint-test": "node_modules/.bin/eslint test/index.js --env mocha",
     "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
     "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js",
-    "lint-style": "node_modules/.bin/jscs {script,test,.}/*.js lib/plugin/*.js lib/{modifier,parse-latin,parser,pluggable,plugin,tokenizer}.js --reporter=inline",
+    "lint-style": "node_modules/.bin/jscs {script,test,.}/*.js lib/plugin/*.js lib/{modifier,parse-latin,parser,plugin,tokenizer}.js --reporter=inline",
     "make": "npm run lint && npm run coverage",
     "benchmark": "node_modules/.bin/matcha benchmark.js",
     "build-expressions": "node script/build-expressions",
