Refactor npm script targets in `package.json`

--- a/package.json
+++ b/package.json
@@ -36,17 +36,17 @@
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test/index.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test/index.js",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/index.js",
-    "lint": "npm run lint-api && npm run lint-plugin && npm run lint-script && npm run lint-test && npm run lint-benchmark && npm run lint-style",
     "lint-api": "node_modules/.bin/eslint index.js lib/*.js",
-    "lint-plugin": "node_modules/.bin/eslint index.js lib/plugin/*.js --rule 'consistent-return: false'",
+    "lint-plugin": "node_modules/.bin/eslint lib/plugin/*.js --rule 'consistent-return: false'",
     "lint-test": "node_modules/.bin/eslint test/index.js --env mocha",
     "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
     "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js",
     "lint-style": "node_modules/.bin/jscs {script,test,.}/*.js lib/plugin/*.js lib/{modifier,parse-latin,parser,plugin,tokenizer}.js --reporter=inline",
+    "lint": "npm run lint-api && npm run lint-plugin && npm run lint-script && npm run lint-test && npm run lint-benchmark && npm run lint-style",
     "make": "npm run lint && npm run coverage",
     "benchmark": "node_modules/.bin/matcha benchmark.js",
-    "build-expressions": "node script/build-expressions",
     "fixture": "node script/generate-fixture",
+    "build-expressions": "node script/build-expressions",
     "build": "npm run build-expressions",
     "prepublish": "npm run build"
   }
