Refactor `package.json` for changes in npm

--- a/package.json
+++ b/package.json
@@ -33,18 +33,20 @@
     "unicode-7.0.0": "^0.1.0"
   },
   "scripts": {
-    "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test/index.js",
-    "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test/index.js",
-    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test/index.js",
-    "lint-api": "node_modules/.bin/eslint index.js lib/*.js",
-    "lint-plugin": "node_modules/.bin/eslint lib/plugin/*.js --rule 'consistent-return: false'",
-    "lint-test": "node_modules/.bin/eslint test/index.js --env mocha",
-    "lint-benchmark": "node_modules/.bin/eslint benchmark.js --global suite,set,bench",
-    "lint-script": "node_modules/.bin/eslint script/build-expressions.js script/generate-fixture.js",
-    "lint-style": "node_modules/.bin/jscs {script,test,.}/*.js lib/plugin/*.js lib/{modifier,parse-latin,parser,plugin,tokenizer}.js --reporter=inline",
+    "test-api": "_mocha --check-leaks test/index.js",
+    "test-coveralls": "istanbul cover _mocha --report lcovonly -- --check-leaks test/index.js",
+    "test-coverage": "istanbul cover _mocha -- -- test/index.js",
+    "test-travis": "npm run test-coveralls",
+    "test": "npm run test-api",
+    "lint-api": "eslint index.js lib/*.js",
+    "lint-plugin": "eslint --rule consistent-return:false lib/plugin/*.js",
+    "lint-test": "eslint --env mocha test/index.js",
+    "lint-benchmark": "eslint --global suite,set,bench benchmark.js",
+    "lint-script": "eslint script/build-expressions.js script/generate-fixture.js",
+    "lint-style": "jscs --reporter inline {script,test,.}/*.js lib/plugin/*.js lib/{modifier,parse-latin,parser,plugin,tokenizer}.js",
     "lint": "npm run lint-api && npm run lint-plugin && npm run lint-script && npm run lint-test && npm run lint-benchmark && npm run lint-style",
-    "make": "npm run lint && npm run coverage",
-    "benchmark": "node_modules/.bin/matcha benchmark.js",
+    "make": "npm run lint && npm run test-coverage",
+    "benchmark": "matcha benchmark.js",
     "fixture": "node script/generate-fixture",
     "build-expressions": "node script/build-expressions",
     "build": "npm run build-expressions",
