Add `postbundle` npm script target to mangle build

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "benchmark": "matcha benchmark.js",
     "fixture": "node script/generate-fixture",
     "bundle": "browserify index.js -s ParseLatin > parse-latin.js",
+    "postbundle": "esmangle parse-latin.js > parse-latin.min.js",
     "build-expressions": "node script/build-expressions",
     "build": "npm run build-expressions && npm run bundle",
     "prepublish": "npm run build"
