Add `parse-latin.js` to bowers `main` instead of `index.js`

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-latin",
-  "main": "index.js",
+  "main": "parse-latin.js",
   "description": "Latin-script (natural language) parser",
   "license": "MIT",
   "keywords": [
