Fix malformed `bower.json`

--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "script/",
     "test/",
     "benchmark.js",
-    "index.js"
+    "index.js",
     "component.json",
     "package.json"
   ]
