--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "browserify": "^8.0.0",
     "chalk": "^0.5.0",
     "diff": "^1.0.0",
-    "eslint": "^0.12.0",
+    "eslint": "^0.24.0",
     "esmangle": "^1.0.0",
     "istanbul": "^0.3.0",
     "jscs": "^1.0.0",
@@ -42,7 +42,7 @@
     "test-travis": "npm run test-coveralls",
     "test": "npm run test-api",
     "lint-api": "eslint index.js lib/*.js",
-    "lint-plugin": "eslint --rule consistent-return:false lib/plugin/*.js",
+    "lint-plugin": "eslint --rule consistent-return:[0] lib/plugin/*.js",
     "lint-test": "eslint --env mocha test/index.js",
     "lint-benchmark": "eslint --global suite,set,bench benchmark.js",
     "lint-script": "eslint script/build-expressions.js script/generate-fixture.js",
