--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "url": "https://github.com/wooorm/parse-latin.git"
   },
   "author": "Titus Wormer <tituswormer@gmail.com>",
+  "files": [
+    "index.js",
+    "lib"
+  ],
   "devDependencies": {
     "browserify": "^11.0.0",
     "chalk": "^1.0.0",
