--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   ],
   "dependencies": {
     "array-iterate": "^1.0.0",
-    "nlcst-to-string": "^1.0.0"
+    "nlcst-to-string": "^1.0.0",
+    "unist-util-modify-children": "^1.0.0",
+    "unist-util-visit-children": "^1.0.0"
   },
   "repository": {
     "type": "git",
