--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: node_js
-script: npm run-script test
 node_js:
 - '0.10'
 - '0.11'
@@ -8,3 +7,19 @@ node_js:
 - '5.0'
 sudo: false
 after_script: npm install codecov.io && cat ./coverage/lcov.info | codecov
+deploy:
+  - provider: npm
+    email: tituswormer@gmail.com
+    api_key:
+      secure: C7WJeGqLkornmqrIIfWwEDNmvIWmzzk0qPTp8M1phXbqcxK4bGotvZtOXVeD0RqIr30FU6RQmdGcHVndEeGmOar3obYzE7LcDzthc1fkE7ZfRLZucY5EdkWMrhG1PZ6nc6m48r5FdNyQTedA0bXzReTZAZ6CE8Ghb2WH6KbZk5g=
+    on:
+      tags: true
+      node: '5.0'
+  - provider: releases
+    api_key:
+      secure: SDs5HT5oa8ECsHlcdpZNpxZb6HhTgMCi+iyA9+iWqpl3r9gkltXQQA5P698VsyQDHic3hUMOSszSk1VpFNBiDfSzfEv5cuWSR88LRBs1T0cV5Zjo5auCo97mjZYPWRTWhA6Q/TYiMLfdgMGaIGlxxxgxu3eG3ngzgZ0EzjKLqTI=
+    file:
+      - "parse-latin.js"
+      - "parse-latin.min.js"
+    on:
+      tags: true
