--- a/package.json
+++ b/package.json
@@ -35,16 +35,18 @@
     "istanbul": "^0.4.0",
     "jscs": "^2.0.0",
     "jscs-jsdoc": "^1.0.0",
+    "mocha": "^2.0.0",
+    "nlcst-test": "^0.2.0",
+    "regenerate": "^1.0.0",
     "remark": "^3.0.0",
     "remark-comment-config": "^2.0.0",
     "remark-github": "^4.0.0",
     "remark-lint": "^2.0.0",
     "remark-slug": "^4.0.0",
+    "remark-usage": "^2.1.0",
     "remark-validate-links": "^2.0.0",
-    "mocha": "^2.0.0",
-    "nlcst-test": "^0.2.0",
-    "regenerate": "^1.0.0",
     "unicode-8.0.0": "^0.1.0",
+    "unist-util-inspect": "^2.0.0",
     "vfile": "^1.1.0"
   },
   "scripts": {
