--- a/package.json
+++ b/package.json
@@ -11,56 +11,56 @@
     "language",
     "parser"
   ],
-  "dependencies": {
-    "array-iterate": "^1.0.0",
-    "nlcst-to-string": "^1.0.0",
-    "unist-util-modify-children": "^1.0.0",
-    "unist-util-visit-children": "^1.0.0"
-  },
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/wooorm/parse-latin.git"
   },
   "bugs": "https://github.com/wooorm/parse-latin/issues",
-  "author": "Titus Wormer <tituswormer@gmail.com>",
-  "files": [
-    "index.js",
-    "lib"
+  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "contributors": [
+    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
   ],
+  "dependencies": {
+    "array-iterate": "^1.0.0",
+    "nlcst-to-string": "^2.0.0",
+    "unist-util-modify-children": "^1.0.0",
+    "unist-util-visit-children": "^1.0.0"
+  },
   "devDependencies": {
-    "browserify": "^13.0.0",
-    "chalk": "^1.0.0",
-    "eslint": "^1.0.0",
-    "esmangle": "^1.0.0",
+    "browserify": "^13.0.1",
+    "eslint": "^2.0.0",
+    "esmangle": "^1.0.1",
     "istanbul": "^0.4.0",
-    "jscs": "^2.0.0",
-    "jscs-jsdoc": "^1.0.0",
-    "mocha": "^2.0.0",
-    "nlcst-test": "^0.2.0",
-    "regenerate": "^1.0.0",
-    "remark": "^3.0.0",
-    "remark-comment-config": "^2.0.0",
-    "remark-github": "^4.0.0",
-    "remark-lint": "^2.0.0",
-    "remark-slug": "^4.0.0",
-    "remark-usage": "^2.1.0",
-    "remark-validate-links": "^2.0.0",
-    "unicode-8.0.0": "^0.1.0",
-    "unist-util-inspect": "^2.0.0",
-    "vfile": "^1.1.0"
+    "jscs": "^3.0.0",
+    "jscs-jsdoc": "^2.0.0",
+    "nlcst-test": "^0.2.1",
+    "regenerate": "^1.3.1",
+    "remark-cli": "^1.0.0",
+    "remark-comment-config": "^4.0.0",
+    "remark-github": "^5.0.0",
+    "remark-lint": "^4.0.0",
+    "remark-usage": "^4.0.0",
+    "remark-validate-links": "^4.0.0",
+    "tape": "^4.0.0",
+    "unicode-8.0.0": "^0.6.0",
+    "unist-util-inspect": "^4.0.0",
+    "vfile": "^1.4.0"
   },
   "scripts": {
-    "fixture": "node script/generate-fixture",
     "build-md": "remark . --quiet --frail",
     "build-expressions": "node script/build-expressions",
-    "build-bundle": "browserify index.js -s ParseLatin > parse-latin.js",
+    "build-bundle": "browserify index.js --bare -s ParseLatin > parse-latin.js",
     "build-mangle": "esmangle parse-latin.js > parse-latin.min.js",
     "build": "npm run build-md && npm run build-expressions && npm run build-bundle && npm run build-mangle",
     "lint-api": "eslint .",
     "lint-style": "jscs --reporter inline .",
     "lint": "npm run lint-api && npm run lint-style",
-    "test-api": "mocha --check-leaks test/index.js",
-    "test-coverage": "istanbul cover _mocha -- test/index.js",
+    "test-api": "node test/index.js",
+    "test-coverage": "istanbul cover test/index.js",
     "test": "npm run build && npm run lint && npm run test-coverage"
   }
 }
