--- a/.remarkrc
+++ b/.remarkrc
@@ -1,12 +1,11 @@
 {
   "output": true,
   "plugins": [
+    "comment-config",
     "lint",
     "github",
-    "comment-config",
-    "usage",
-    "slug",
-    "validate-links"
+    "validate-links",
+    "usage"
   ],
   "settings": {
     "bullet": "*"
