--- a/package.json
+++ b/package.json
@@ -11,21 +11,17 @@
     "language",
     "parser"
   ],
-  "files": [
-    "lib",
-    "index.js"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wooorm/parse-latin.git"
-  },
+  "repository": "https://github.com/wooorm/parse-latin",
   "bugs": "https://github.com/wooorm/parse-latin/issues",
   "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
   ],
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "dependencies": {
-    "array-iterate": "^1.0.0",
     "nlcst-to-string": "^2.0.0",
     "unist-util-modify-children": "^1.0.0",
     "unist-util-visit-children": "^1.0.0"
@@ -33,23 +29,18 @@
   "devDependencies": {
     "browserify": "^13.0.1",
     "bundle-collapser": "^1.2.1",
-    "eslint": "^2.0.0",
     "esmangle": "^1.0.1",
-    "istanbul": "^0.4.0",
-    "jscs": "^3.0.0",
-    "jscs-jsdoc": "^2.0.0",
+    "is-hidden": "^1.0.1",
+    "negate": "^1.0.0",
     "nlcst-test": "^0.2.1",
+    "nyc": "^8.3.0",
     "regenerate": "^1.3.1",
-    "remark-cli": "^1.0.0",
-    "remark-comment-config": "^4.0.0",
-    "remark-github": "^5.0.0",
-    "remark-lint": "^4.0.0",
-    "remark-usage": "^4.0.0",
-    "remark-validate-links": "^4.0.0",
+    "remark-cli": "^2.0.0",
+    "remark-preset-wooorm": "^1.0.0",
     "tape": "^4.0.0",
-    "unicode-8.0.0": "^0.6.0",
-    "unist-util-inspect": "^4.0.0",
-    "vfile": "^1.4.0"
+    "unicode-8.0.0": "^0.7.0",
+    "vfile": "^2.0.0",
+    "xo": "^0.16.0"
   },
   "scripts": {
     "build-md": "remark . --quiet --frail",
@@ -57,11 +48,30 @@
     "build-bundle": "browserify index.js -p bundle-collapser/plugin --bare -s ParseLatin > parse-latin.js",
     "build-mangle": "esmangle parse-latin.js > parse-latin.min.js",
     "build": "npm run build-expressions && npm run build-md && npm run build-bundle && npm run build-mangle",
-    "lint-api": "eslint .",
-    "lint-style": "jscs --reporter inline .",
-    "lint": "npm run lint-api && npm run lint-style",
+    "lint": "xo",
     "test-api": "node test/index.js",
-    "test-coverage": "istanbul cover test/index.js",
+    "test-coverage": "nyc --reporter lcov tape test/index.js",
     "test": "npm run build && npm run lint && npm run test-coverage"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 100,
+    "functions": 100,
+    "branches": 100
+  },
+  "xo": {
+    "space": true,
+    "rules": {
+      "guard-for-in": "off",
+      "max-depth": "off",
+      "max-lines": "off"
+    },
+    "ignores": [
+      "parse-latin.js"
+    ]
+  },
+  "remarkConfig": {
+    "output": true,
+    "presets": "wooorm"
   }
 }
