--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "tape": "^4.0.0",
     "unicode-8.0.0": "^0.7.0",
     "vfile": "^2.0.0",
-    "xo": "^0.16.0"
+    "xo": "^0.17.0"
   },
   "scripts": {
     "build-md": "remark . --quiet --frail",
@@ -62,9 +62,9 @@
   "xo": {
     "space": true,
     "rules": {
+      "no-useless-escape": "off",
       "guard-for-in": "off",
-      "max-depth": "off",
-      "max-lines": "off"
+      "max-depth": "off"
     },
     "ignores": [
       "parse-latin.js"
