--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "remark-preset-wooorm": "^1.0.0",
     "tape": "^4.0.0",
     "unicode-8.0.0": "^0.7.0",
+    "unist-util-remove-position": "^1.1.0",
     "vfile": "^2.0.0",
     "xo": "^0.17.0"
   },
