--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "nlcst-test": "^1.0.0",
     "nyc": "^10.0.0",
     "regenerate": "^1.3.1",
-    "remark-cli": "^2.0.0",
-    "remark-preset-wooorm": "^1.0.0",
+    "remark-cli": "^3.0.0",
+    "remark-preset-wooorm": "^2.0.0",
     "tape": "^4.0.0",
     "unicode-8.0.0": "^0.7.0",
     "unist-util-remove-position": "^1.1.0",
@@ -44,7 +44,7 @@
     "xo": "^0.17.0"
   },
   "scripts": {
-    "build-md": "remark . --quiet --frail",
+    "build-md": "remark . -qfo",
     "build-expressions": "node script/build-expressions",
     "build-bundle": "browserify index.js -p bundle-collapser/plugin --bare -s ParseLatin > parse-latin.js",
     "build-mangle": "esmangle parse-latin.js > parse-latin.min.js",
@@ -72,7 +72,6 @@
     ]
   },
   "remarkConfig": {
-    "output": true,
-    "presets": "wooorm"
+    "plugins": ["preset-wooorm"]
   }
 }
