--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "unist-util-visit-children": "^1.0.0"
   },
   "devDependencies": {
-    "browserify": "^14.0.0",
+    "browserify": "^16.0.0",
     "bundle-collapser": "^1.2.1",
     "esmangle": "^1.0.1",
     "is-hidden": "^1.0.1",
@@ -35,13 +35,13 @@
     "nlcst-test": "^1.0.0",
     "nyc": "^11.0.0",
     "regenerate": "^1.3.1",
-    "remark-cli": "^4.0.0",
-    "remark-preset-wooorm": "^3.0.0",
+    "remark-cli": "^5.0.0",
+    "remark-preset-wooorm": "^4.0.0",
     "tape": "^4.0.0",
     "unicode-8.0.0": "^0.7.0",
     "unist-util-remove-position": "^1.1.0",
     "vfile": "^2.0.0",
-    "xo": "^0.18.0"
+    "xo": "^0.20.0"
   },
   "scripts": {
     "build-md": "remark . -qfo",
@@ -66,13 +66,19 @@
     "rules": {
       "no-useless-escape": "off",
       "guard-for-in": "off",
-      "max-depth": "off"
+      "max-depth": "off",
+      "no-var": "off",
+      "object-shorthand": "off",
+      "prefer-arrow-callback": "off",
+      "unicorn/no-hex-escape": "off"
     },
     "ignores": [
       "parse-latin.js"
     ]
   },
   "remarkConfig": {
-    "plugins": ["preset-wooorm"]
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
