--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "negate": "^1.0.0",
     "nlcst-test": "^1.0.0",
     "nyc": "^11.0.0",
+    "prettier": "^1.12.1",
     "regenerate": "^1.3.1",
     "remark-cli": "^5.0.0",
     "remark-preset-wooorm": "^4.0.0",
@@ -44,15 +45,14 @@
     "xo": "^0.20.0"
   },
   "scripts": {
-    "build-md": "remark . -qfo",
-    "build-expressions": "node script/build-expressions",
+    "generate": "node script/build-expressions",
+    "format": "remark . -qfo && prettier --write '**/*.js' && xo --fix",
     "build-bundle": "browserify index.js -p bundle-collapser/plugin --bare -s ParseLatin > parse-latin.js",
     "build-mangle": "esmangle parse-latin.js > parse-latin.min.js",
-    "build": "npm run build-expressions && npm run build-md && npm run build-bundle && npm run build-mangle",
-    "lint": "xo",
-    "test-api": "node test/index.js",
+    "build": "npm run build-bundle && npm run build-mangle",
+    "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
-    "test": "npm run build && npm run lint && npm run test-coverage"
+    "test": "npm run generate && npm run format && npm run build && npm run test-coverage"
   },
   "nyc": {
     "check-coverage": true,
@@ -60,8 +60,16 @@
     "functions": 100,
     "branches": 100
   },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "semi": false,
+    "trailingComma": "none"
+  },
   "xo": {
-    "space": true,
+    "prettier": true,
     "esnext": false,
     "rules": {
       "no-useless-escape": "off",
@@ -70,6 +78,7 @@
       "no-var": "off",
       "object-shorthand": "off",
       "prefer-arrow-callback": "off",
+      "unicorn/number-literal-case": "off",
       "unicorn/no-hex-escape": "off"
     },
     "ignores": [
