--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   ],
   "repository": "wooorm/parse-latin",
   "bugs": "https://github.com/wooorm/parse-latin/issues",
-  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
-    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
   "files": [
     "lib",
