--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
   },
   "devDependencies": {
     "browserify": "^16.0.0",
-    "bundle-collapser": "^1.2.1",
-    "esmangle": "^1.0.1",
     "is-hidden": "^1.0.1",
     "negate": "^1.0.0",
     "nlcst-test": "^1.0.0",
@@ -39,6 +37,7 @@
     "remark-cli": "^6.0.0",
     "remark-preset-wooorm": "^4.0.0",
     "tape": "^4.0.0",
+    "tinyify": "^2.5.0",
     "unicode-12.1.0": "^0.8.0",
     "unist-util-remove-position": "^1.1.0",
     "vfile": "^4.0.0",
@@ -47,8 +46,8 @@
   "scripts": {
     "generate": "node script/build-expressions",
     "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
-    "build-bundle": "browserify index.js -p bundle-collapser/plugin --bare -s ParseLatin > parse-latin.js",
-    "build-mangle": "esmangle parse-latin.js > parse-latin.min.js",
+    "build-bundle": "browserify . -s ParseLatin -o parse-latin.js",
+    "build-mangle": "browserify . -s ParseLatin -p tinyify -o parse-latin.min.js",
     "build": "npm run build-bundle && npm run build-mangle",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
