--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   ],
   "repository": "wooorm/parse-latin",
   "bugs": "https://github.com/wooorm/parse-latin/issues",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/wooorm"
+  },
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
