--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
   },
   "devDependencies": {
     "browserify": "^16.0.0",
-    "is-hidden": "^1.0.1",
+    "is-hidden": "^1.0.0",
     "negate": "^1.0.0",
     "nlcst-test": "^1.0.0",
-    "nyc": "^14.0.0",
-    "prettier": "^1.12.1",
-    "regenerate": "^1.3.1",
-    "remark-cli": "^6.0.0",
-    "remark-preset-wooorm": "^4.0.0",
+    "nyc": "^15.0.0",
+    "prettier": "^1.0.0",
+    "regenerate": "^1.0.0",
+    "remark-cli": "^7.0.0",
+    "remark-preset-wooorm": "^6.0.0",
     "tape": "^4.0.0",
-    "tinyify": "^2.5.0",
+    "tinyify": "^2.0.0",
     "unicode-12.1.0": "^0.8.0",
-    "unist-util-remove-position": "^1.1.0",
+    "unist-util-remove-position": "^2.0.0",
     "vfile": "^4.0.0",
-    "xo": "^0.24.0"
+    "xo": "^0.25.0"
   },
   "scripts": {
     "generate": "node script/build-expressions",
@@ -75,11 +75,12 @@
     "prettier": true,
     "esnext": false,
     "rules": {
+      "unicorn/prefer-reflect-apply": "off",
+      "unicorn/no-hex-escape": "off",
       "no-misleading-character-class": "off",
       "no-useless-escape": "off",
       "guard-for-in": "off",
-      "max-depth": "off",
-      "unicorn/no-hex-escape": "off"
+      "max-depth": "off"
     },
     "ignores": [
       "parse-latin.js"
