--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
     "tinyify": "^3.0.0",
-    "unicode-12.1.0": "^0.8.0",
+    "@unicode/unicode-13.0.0": "^1.0.0",
     "unist-util-remove-position": "^3.0.0",
     "vfile": "^4.0.0",
     "xo": "^0.33.0"
