--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
   "files": [
-    "lib",
+    "lib/",
     "index.js"
   ],
   "dependencies": {
@@ -31,6 +31,7 @@
     "unist-util-visit-children": "^1.0.0"
   },
   "devDependencies": {
+    "@unicode/unicode-13.0.0": "^1.0.0",
     "browserify": "^17.0.0",
     "is-hidden": "^1.0.0",
     "negate": "^1.0.0",
@@ -38,14 +39,13 @@
     "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "regenerate": "^1.0.0",
-    "remark-cli": "^9.0.0-alpha.1",
+    "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
     "tinyify": "^3.0.0",
-    "@unicode/unicode-13.0.0": "^1.0.0",
     "unist-util-remove-position": "^3.0.0",
     "vfile": "^4.0.0",
-    "xo": "^0.33.0"
+    "xo": "^0.38.0"
   },
   "scripts": {
     "generate": "node script/build-expressions",
@@ -75,6 +75,8 @@
     "prettier": true,
     "esnext": false,
     "rules": {
+      "unicorn/no-this-assignment": "off",
+      "unicorn/no-array-for-each": "off",
       "unicorn/prefer-reflect-apply": "off",
       "unicorn/no-hex-escape": "off",
       "no-misleading-character-class": "off",
