--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
   "files": [
     "lib/",
     "index.js"
@@ -32,8 +35,8 @@
   },
   "devDependencies": {
     "@unicode/unicode-13.0.0": "^1.0.0",
-    "browserify": "^17.0.0",
-    "is-hidden": "^1.0.0",
+    "c8": "^7.0.0",
+    "is-hidden": "^2.0.0",
     "negate": "^1.0.0",
     "nlcst-test": "^2.0.0",
     "nyc": "^15.0.0",
@@ -50,18 +53,9 @@
   "scripts": {
     "generate": "node script/build-expressions",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "build-bundle": "browserify . -s ParseLatin -o parse-latin.js",
-    "build-mangle": "browserify . -s ParseLatin -p tinyify -o parse-latin.min.js",
-    "build": "npm run build-bundle && npm run build-mangle",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test/index.js",
-    "test": "npm run generate && npm run format && npm run build && npm run test-coverage"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 100,
-    "functions": 100,
-    "branches": 100
+    "test-api": "node test/index.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test/index.js",
+    "test": "npm run generate && npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
@@ -73,20 +67,15 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
-      "unicorn/no-this-assignment": "off",
-      "unicorn/no-array-for-each": "off",
-      "unicorn/prefer-reflect-apply": "off",
-      "unicorn/no-hex-escape": "off",
+      "import/no-mutable-exports": "off",
+      "max-depth": "off",
+      "no-var": "off",
       "no-misleading-character-class": "off",
-      "no-useless-escape": "off",
-      "guard-for-in": "off",
-      "max-depth": "off"
-    },
-    "ignores": [
-      "parse-latin.js"
-    ]
+      "prefer-arrow-callback": "off",
+      "unicorn/no-array-for-each": "off",
+      "unicorn/prefer-reflect-apply": "off"
+    }
   },
   "remarkConfig": {
     "plugins": [
