--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
       "no-misleading-character-class": "off",
       "prefer-arrow-callback": "off",
       "unicorn/no-array-for-each": "off",
+      "unicorn/no-this-assignment": "off",
       "unicorn/prefer-reflect-apply": "off"
     }
   },
