--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
+  "type": "module",
   "devDependencies": {
-    "browserify": "^17.0.0",
     "cssnano": "^4.0.0",
-    "parse-latin": "^4.0.0",
+    "esbuild": "^0.11.0",
+    "parse-latin": "^5.0.0",
     "postcss-cli": "^8.0.0",
-    "postcss-preset-env": "^6.6.0",
+    "postcss-preset-env": "^6.0.0",
     "prettier": "^2.0.0",
     "rehype-cli": "^10.0.0",
     "rehype-preset-minify": "^5.0.0",
@@ -22,16 +23,18 @@
     "remark-preset-wooorm": "^8.0.0",
     "stylelint": "^13.0.0",
     "stylelint-config-standard": "^21.0.0",
-    "tinyify": "^3.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix && stylelint src/index.css --fix",
-    "build:js": "browserify src -p tinyify -o dest/index.js",
-    "build:css": "postcss src/index.css -o dest/index.css",
+    "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix && stylelint src/index.css --fix",
+    "build:js": "esbuild src/index.js --bundle --minify --target=es6 --outfile=dest/index.nomodule.js && esbuild src/index.js --bundle --minify --target=es2020 --format=esm --outfile=dest/index.module.js",
+    "build:css": "postcss src/index.css > dest/index.css",
     "build:html": "rehype -u preset-minify -u prevent-favicon-request src -o dest",
     "build": "npm run build:js && npm run build:css && npm run build:html",
     "test": "npm run format && npm run build"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   },
   "prettier": {
     "tabWidth": 2,
@@ -43,15 +46,11 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
-      "guard-for-in": "off",
+      "no-var": "off",
       "unicorn/prefer-dom-node-append": "off",
       "unicorn/prefer-dom-node-remove": "off"
     }
-  },
-  "stylelint": {
-    "extends": "stylelint-config-standard"
   },
   "browserslist": [
     "> 1%",
