--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "xo": "^0.52.0"
   },
   "scripts": {
-    "generate": "node script/build-expressions",
+    "prepack": "npm run generate && npm run format",
+    "generate": "node script/build-expressions.js",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "test-api": "node test/index.js",
-    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test/index.js",
+    "test-api": "node --conditions development test/index.js",
+    "test-coverage": "c8 --check-coverage --100 --reporter lcov npm run test-api",
     "test": "npm run generate && npm run format && npm run test-coverage"
   },
   "prettier": {
