Fix CR+LF being seen as a break between paragraphs
Closes retextjs/retext-repeated-words#10.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "scripts": {
     "prepack": "npm run generate && npm run format",
+    "fixture": "node script/generate-fixture.js",
     "generate": "node script/build-expressions.js",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
