--- a/package.json
+++ b/package.json
@@ -24,38 +24,46 @@
   "sideEffects": false,
   "type": "module",
   "main": "index.js",
+  "types": "index.d.ts",
   "files": [
     "lib/",
+    "index.d.ts",
     "index.js"
   ],
   "dependencies": {
+    "@types/nlcst": "^1.0.0",
+    "@types/unist": "^2.0.0",
     "nlcst-to-string": "^3.0.0",
     "unist-util-modify-children": "^3.0.0",
-    "unist-util-visit-children": "^2.0.0"
+    "unist-util-visit-children": "^2.0.0",
+    "vfile": "^5.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/regenerate": "^1.0.0",
     "@unicode/unicode-13.0.0": "^1.0.0",
     "c8": "^7.0.0",
     "is-hidden": "^2.0.0",
-    "negate": "^1.0.0",
     "nlcst-test": "^3.0.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "regenerate": "^1.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
+    "type-coverage": "^2.0.0",
+    "typescript": "^4.0.0",
     "unist-util-remove-position": "^4.0.0",
-    "vfile": "^5.0.0",
     "xo": "^0.52.0"
   },
   "scripts": {
-    "prepack": "npm run generate && npm run format",
+    "prepack": "npm run generate && npm run build && npm run format",
     "fixture": "node script/generate-fixture.js",
+    "build": "tsc --build --clean && tsc --build && type-coverage",
     "generate": "node script/build-expressions.js",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
     "test-coverage": "c8 --check-coverage --100 --reporter lcov npm run test-api",
-    "test": "npm run generate && npm run format && npm run test-coverage"
+    "test": "npm run generate && npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
@@ -76,5 +84,10 @@
     "plugins": [
       "preset-wooorm"
     ]
+  },
+  "typeCoverage": {
+    "atLeast": 100,
+    "detail": true,
+    "strict": true
   }
 }
