Refactor `package.json`

--- a/package.json
+++ b/package.json
@@ -57,12 +57,11 @@
   },
   "scripts": {
     "prepack": "npm run generate && npm run build && npm run format",
-    "fixture": "node script/generate-fixture.js",
     "generate": "node script/build-expressions.js",
     "build": "tsc --build --clean && tsc --build && type-coverage",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
-    "test-coverage": "c8 --check-coverage --100 --reporter lcov npm run test-api",
+    "test-coverage": "c8 --100 --reporter lcov npm run test-api",
     "test": "npm run generate && npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
@@ -73,21 +72,22 @@
     "semi": false,
     "trailingComma": "none"
   },
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-wooorm"
+    ]
+  },
+  "typeCoverage": {
+    "atLeast": 100,
+    "detail": true,
+    "strict": true,
+    "ignoreCatch": true
+  },
   "xo": {
     "prettier": true,
     "rules": {
       "max-depth": "off",
       "no-misleading-character-class": "off"
     }
-  },
-  "remarkConfig": {
-    "plugins": [
-      "preset-wooorm"
-    ]
-  },
-  "typeCoverage": {
-    "atLeast": 100,
-    "detail": true,
-    "strict": true
   }
 }
