--- a/package.json
+++ b/package.json
@@ -42,23 +42,23 @@
     "@types/node": "^20.0.0",
     "@types/regenerate": "^1.0.0",
     "@unicode/unicode-15.0.0": "^1.0.0",
-    "c8": "^7.0.0",
+    "c8": "^8.0.0",
     "is-hidden": "^2.0.0",
     "nlcst-test": "^3.0.0",
-    "prettier": "^2.0.0",
+    "prettier": "^3.0.0",
     "regenerate": "^1.0.0",
     "remark-cli": "^11.0.0",
     "remark-preset-wooorm": "^9.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^5.0.0",
     "unist-util-remove-position": "^4.0.0",
-    "xo": "^0.54.0"
+    "xo": "^0.55.0"
   },
   "scripts": {
     "prepack": "npm run generate && npm run build && npm run format",
     "generate": "node script/build-expressions.js",
     "build": "tsc --build --clean && tsc --build && type-coverage",
-    "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
+    "format": "remark . -qfo && prettier . -w --log-level warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
     "test-coverage": "c8 --100 --reporter lcov npm run test-api",
     "test": "npm run generate && npm run build && npm run format && npm run test-coverage"
@@ -86,7 +86,8 @@
     "prettier": true,
     "rules": {
       "max-depth": "off",
-      "no-misleading-character-class": "off"
+      "no-misleading-character-class": "off",
+      "unicorn/prefer-at": "off"
     },
     "overrides": [
       {
