--- a/package.json
+++ b/package.json
@@ -61,15 +61,15 @@
     "format": "remark . -qfo && prettier . -w --log-level warn && xo --fix",
     "test-api": "node --conditions development test/index.js",
     "test-coverage": "c8 --100 --reporter lcov npm run test-api",
-    "test": "npm run generate && npm run build && npm run format && npm run test-coverage"
+    "test": "npm run build && npm run format && npm run test-coverage"
   },
   "prettier": {
-    "tabWidth": 2,
-    "useTabs": false,
-    "singleQuote": true,
     "bracketSpacing": false,
     "semi": false,
-    "trailingComma": "none"
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false
   },
   "remarkConfig": {
     "plugins": [
@@ -79,16 +79,10 @@
   "typeCoverage": {
     "atLeast": 100,
     "detail": true,
-    "strict": true,
-    "ignoreCatch": true
+    "ignoreCatch": true,
+    "strict": true
   },
   "xo": {
-    "prettier": true,
-    "rules": {
-      "max-depth": "off",
-      "no-misleading-character-class": "off",
-      "unicorn/prefer-at": "off"
-    },
     "overrides": [
       {
         "files": [
@@ -99,6 +93,12 @@
           "no-await-in-loop": "off"
         }
       }
-    ]
+    ],
+    "prettier": true,
+    "rules": {
+      "max-depth": "off",
+      "no-misleading-character-class": "off",
+      "unicorn/prefer-at": "off"
+    }
   }
 }
